--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <task-app></task-app>
+  <app-root></app-root>
 </body>
 </html>
